Работает отбор employee по position